# march-madness

./: .gitignore  README.md  pyproject.toml
kaggle_2025/: download_barttorvik.py  download_bball_ref.py  download_kenpom.py  id_kaggle_name_map.json  kaggle_utils.py  preprocess_data.py  spellings_to_id.json  submission.py  womens_id_kaggle_name_map.json  womens_spellings_to_id.json
kaggle_2025/models/: mens_barttorvik.pkl  womens_barttorvik.pkl
notebooks/: Bracket.ipynb  Kaggle 2025.ipynb  Scratch.ipynb  kaggle_2025_mens_bracket_predictions.ipynb  kaggle_2025_save_cleaned_team_data.ipynb
uro_cbb/: barttorvik.py  bball_ref.py  bracket.py  constants.py  kenpom.py  model_utils.py
