[project]
name = "march-madness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "pandas>=2.2.3",
    "polars>=1.25.2",
    "pyarrow>=19.0.1",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "statsmodels>=0.14.4",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
